Plugins/TeamCity/fluentbuild-runner/fluentbuild-runner-test/testData/plugins/fluentbuildRunner/app_rspec/spec/statistics/compile_error/error1_spec.rb
# @author: Roman Chernyatchik
require "spec"

describe "Compilation"  do

  it "should fail" do
    $
  end
end